# bazel-springboot-example

./: BUILD.bazel  WORKSPACE
src/main/java/com/example/demo/: DemoApplication.java
src/main/scala/com/example/demo/: DemoApplication.scala
